# synapse

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  conanfile.txt  docker-compose.yml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  FindLibraries.cmake
config/: config.yaml.example  log_config.yaml
include/matrix/api/client/: client_api.hpp
include/matrix/api/client/v1/: client_api_v1.hpp  media_handler.hpp  room_handler.hpp  sync_handler.hpp  user_handler.hpp
include/matrix/api/client/v2/: client_api_v2.hpp
include/matrix/api/common/: api_types.hpp  error_codes.hpp  response_builder.hpp
include/matrix/api/federation/: federation_api.hpp  key_server.hpp  transaction.hpp
include/matrix/api/websocket/: events_websocket.hpp  websocket_handler.hpp  websocket_session.hpp
include/matrix/core/: matrix_types.hpp  types.hpp
include/matrix/core/event/: event.hpp  event_builder.hpp  event_parser.hpp  message_event.hpp  room_event.hpp  state_event.hpp
include/matrix/core/room/: room.hpp  room_manager.hpp  room_state.hpp  state_resolution.hpp
include/matrix/core/state/: state_cache.hpp  state_manager.hpp
include/matrix/core/user/: authentication.hpp  device.hpp  user.hpp  user_manager.hpp
include/matrix/crypto/common/: crypto_types.hpp  hash.hpp  key_manager.hpp
include/matrix/crypto/e2ee/: device_keys.hpp  e2ee_manager.hpp  key_verification.hpp  megolm_session.hpp  olm_session.hpp
include/matrix/crypto/olm/: olm_session.hpp  olm_utility.hpp  olm_wrapper.hpp
include/matrix/storage/cache/: cache.hpp  lru_cache.hpp  redis_cache.hpp
include/matrix/storage/database/: database.hpp  database_connection.hpp
include/matrix/storage/database/postgresql/: postgresql_connection.hpp  postgresql_database.hpp  postgresql_types.hpp
include/matrix/storage/database/sqlite/: sqlite_connection.hpp  sqlite_database.hpp  sqlite_types.hpp
include/matrix/storage/migration/: migration_manager.hpp  migrations.hpp
include/matrix/storage/repository/: device_repository.hpp  event_repository.hpp  repository.hpp  room_repository.hpp  user_repository.hpp
scripts/: setup_database.sh  start_server.sh  stop_server.sh
scripts/migration/: 001_initial_schema.sql  002_add_e2ee.sql  003_federation_tables.sql
